files migration is done

--- a/js/views/cart.hbs
+++ b/js/views/cart.hbs
@@ -33,7 +33,7 @@
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                  <a href="index.html" class="actives"><i class="fa fa-home"></i></a>
+                  <a href="/" class="actives"><i class="fa fa-home"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -44,26 +44,26 @@
                       
                       
                       <li class="nav-item">
-                        <a class="nav-link" href="men.html">Men</a>
+                        <a class="nav-link" href="/">Men</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="women.html">Women</a>
+                        <a class="nav-link" href="/women">Women</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="kids.html">Kids</a>
+                        <a class="nav-link" href="/kids">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="men-shoes.html">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="women-shoes.html">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="kids-shoes.html">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+                  <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
@@ -87,8 +87,6 @@
         
 
 
-
-      <!-- <div id="container"></div>-->
 
       <script async
       src="https://pay.google.com/gp/p/js/pay.js"
