--- a/js/views/kids.hbs
+++ b/js/views/kids.hbs
@@ -24,40 +24,40 @@
         
         <header>
             <div class="your-fashion-text-box">
-                <a href="index.html" class="shopname">Your Fashion</a> 
+                <a href="/" class="shopname">Your Fashion</a> 
             </div>
 
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                    <a href="index.html" class="actives"><i class="fa fa-home"></i></a>
+                    <a href="/" class="actives"><i class="fa fa-home"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="men.html">Men</a>
+                        <a class="nav-link" href="/men">Men</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="women.html">Women</a>
+                        <a class="nav-link" href="/women">Women</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="kids.html">Kids</a>
+                        <a class="nav-link" href="/kids">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="men-shoes.html">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="women-shoes.html">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="kids-shoes.html">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
                     
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+                  <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
@@ -73,13 +73,13 @@
               <h2 class="name">Girls dress</h2>
               <span class="price">£ 64.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/girls-dress.jpg" class="product-img" alt="">
+              <img src="/images/girls-dress.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/girls-dress.jpg" alt="">
+                  <img src="/images/girls-dress.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -96,13 +96,13 @@
               <h2 class="name">Girls dress</h2>
               <span class="price">£ 57.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/girls-dress1.webp" class="product-img" alt="">
+              <img src="/images/girls-dress1.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/girls-dress1.webp" alt="">
+                  <img src="/images/girls-dress1.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -119,7 +119,7 @@
               <h2 class="name">Girls dress</h2>
               <span class="price">£89.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/girls-dress2.webp" class="product-img" alt="">
+              <img src="/images/girls-dress2.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
@@ -142,13 +142,13 @@
               <h2 class="name">Boys jumper</h2>
               <span class="price">£80.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/boys-jumper.avif" class="product-img" alt="">
+              <img src="/images/boys-jumper.avif" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/boys-jumper.avif" alt="">
+                  <img src="/images/boys-jumper.avif" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -165,13 +165,13 @@
               <h2 class="name">Boys jumper</h2>
               <span class="price">£50.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/boys-jumper1.webp" class="product-img" alt="">
+              <img src="/images/boys-jumper1.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/boys-jumper1.webp" alt="">
+                  <img src="/images/boys-jumper1.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
@@ -188,13 +188,13 @@
               <h2 class="name">Boys jumper</h2>
               <span class="price">£70.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/boys-jumper2.webp" class="product-img" alt="">
+              <img src="/images/boys-jumper2.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/boys-jumper2.webp" alt="">
+                  <img src="/images/boys-jumper2.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Kids clothes<br><span>Kids' wear</span></h2>
