--- a/js/views/index.hbs
+++ b/js/views/index.hbs
@@ -24,13 +24,13 @@
         <!--<script src="css/app.js"></script>-->
         <header>
             <div class="your-fashion-text-box">
-                <a href="index.html" class="shopname">Your Fashion</a> 
+                <a href="/" class="shopname">Your Fashion</a> 
             </div>
 
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                  <a href="index.html" class="actives"><i class="fa fa-home"></i></a>
+                  <a href="/" class="actives"><i class="fa fa-home"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -41,26 +41,26 @@
                       
                       
                       <li class="nav-item">
-                        <a class="nav-link" href="men.html">Men</a>
+                        <a class="nav-link" href="/men">Men</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="women.html">Women</a>
+                        <a class="nav-link" href="/women">Women</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="kids.html">Kids</a>
+                        <a class="nav-link" href="/kids">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="men-shoes.html">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="women-shoes.html">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="kids-shoes.html">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+                  <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
@@ -92,34 +92,7 @@
           <button class="next-button">Next</button>
         </p>
 
-        <!--<div class="slideshow-container">
 
-          <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="img/modern-womens.jpg" style="width:100%">
-            <div class="text">Women smart choices</div>
-          </div>
-          
-          <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="img/menClothes.jpg" style="width:100%">
-            <div class="text">For all tastes</div>
-          </div>
-          
-          <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="img/kidsClothes.jpg" style="width:100%">
-            <div class="text">Cute appearance</div>
-          </div>
-          
-          </div>
-          <br>
-          
-          <div style="text-align:center">
-            <span class="dot"></span> 
-            <span class="dot"></span> 
-            <span class="dot"></span> 
-          </div>-->
         <script src="/slides.js"></script>
         <script src="/search.js"></script>
         <script src="/shopping-basket.js"></script>
