--- a/js/views/men.hbs
+++ b/js/views/men.hbs
@@ -25,40 +25,40 @@
        
         <header>
             <div class="your-fashion-text-box">
-                <a href="index.html" class="shopname">Your Fashion</a> 
+                <a href="/" class="shopname">Your Fashion</a> 
             </div>
 
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                  <a href="index.html" class="actives"><i class="fa fa-home"></i></a>
+                  <a href="/" class="actives"><i class="fa fa-home"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="men.html">Men</a>
+                        <a class="nav-link" href="/men">Men</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="women.html">Women</a>
+                        <a class="nav-link" href="/women">Women</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="kids.html">Kids</a>
+                        <a class="nav-link" href="/kids">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="men-shoes.html">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="women-shoes.html">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="kids-shoes.html">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
                     
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+                  <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
