--- a/js/views/women-shoes.hbs
+++ b/js/views/women-shoes.hbs
@@ -20,43 +20,42 @@
 
     <body class="responsive">
       
-        <script src="css/app.js"></script>
         <header>
             <div class="your-fashion-text-box">
-                <a href="index.html" class="shopname">Your Fashion</a> 
+                <a href="/" class="shopname">Your Fashion</a> 
             </div>
 
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                    <a href="index.html" class="actives"><i class="fa fa-home"></i></a>
+                    <a href="/" class="actives"><i class="fa fa-home"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="men.html">Men</a>
+                        <a class="nav-link" href="/men">Men</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="women.html">Women</a>
+                        <a class="nav-link" href="/women">Women</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="kids.html">Kids</a>
+                        <a class="nav-link" href="/kids">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="men-shoes.html">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="women-shoes.html">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="kids-shoes.html">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
                     
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+                  <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
@@ -72,13 +71,13 @@
               <h2 class="name">Women Shoes</h2>
               <span class="price">£47.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/women-shoes.jpg" class="product-img" alt="">
+              <img src="/images/women-shoes.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/women-shoes.jpg" alt="">
+                  <img src="/images/women-shoes.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
@@ -95,13 +94,13 @@
               <h2 class="name">Women Shoes</h2>
               <span class="price">£87.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/women-shoes1.jpeg" class="product-img" alt="">
+              <img src="/images/women-shoes1.jpeg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/women-shoes1.jpeg" alt="">
+                  <img src="/images/women-shoes1.jpeg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
@@ -118,13 +117,13 @@
               <h2 class="name">Women Shoes</h2>
               <span class="price">£89.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/women-shoes2.webp" class="product-img" alt="">
+              <img src="/images/women-shoes2.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/women-shoes2.webp" alt="">
+                  <img src="/images/women-shoes2.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
@@ -141,13 +140,13 @@
               <h2 class="name">Women Shoes</h2>
               <span class="price">£119.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/women-shoes3.jpg" class="product-img" alt="">
+              <img src="/images/women-shoes3.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/women-shoes3.jpg" alt="">
+                  <img src="/images/women-shoes3.jpg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
@@ -164,13 +163,13 @@
               <h2 class="name">Women Shoes</h2>
               <span class="price">£52.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/women-shoes4.jpeg" class="product-img" alt="">
+              <img src="/images/women-shoes4.jpeg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/women-shoes4.jpeg" alt="">
+                  <img src="/images/women-shoes4.jpeg" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
@@ -187,13 +186,13 @@
               <h2 class="name">Women Shoes</h2>
               <span class="price">£ 60.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="images/women-shoes5.webp" class="product-img" alt="">
+              <img src="/images/women-shoes5.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="images/women-shoes5.webp" alt="">
+                  <img src="/images/women-shoes5.webp" alt="">
                 </div>
                 <div class="info">
                   <h2>Women Shoes<br><span>Foot wear</span></h2>
