--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -8,11 +8,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <title>Your Fashion</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+      
         <link rel="preconnect" href="https://fonts.gstatic.com">
        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="stylesheet" href="/style.css">
         <script src="/shopping-basket.js" async></script>
         <script src="/payment.js"></script>
 
