add and remove item buttons fixed.

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -27,7 +27,7 @@
         
         <header>
             <div class="your-fashion-text-box">
-                <a href="index.html" class="shopname">Your Fashion</a> 
+                <a href="/index" class="shopname">Your Fashion</a> 
             </div>
 
             
@@ -44,7 +44,7 @@
                       
                       
                       <li class="nav-item">
-                        <a class="nav-link" href="/">Men</a>
+                        <a class="nav-link" href="/men">Men</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/women">Women</a>
