--- a/public/style.css
+++ b/public/style.css
@@ -172,6 +172,18 @@ header{
   top: 200px;
 }
 
+.container-1-1, .container-1-2, .container-1-3, .container-1-4, .container-1-5, .container-1-6{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  top: 200px;
+  margin-top: 50px;
+}
+
 /*Styles for product card*/
 
 .product .product-card {
@@ -180,7 +192,7 @@ header{
   position: relative;
   width: 300px;
   height: 500px;
-  margin: 40px;
+  margin: 60px;
   border-radius: 10px;
 }
 
@@ -200,8 +212,8 @@ header{
 .product .product-card .product-img {
   z-index: 1;
   position: absolute;
-  max-width: 370px;
-  max-height: 430px;
+  max-width: 270px;
+  max-height: 300px;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
