--- a/views/kids.hbs
+++ b/views/kids.hbs
@@ -67,8 +67,8 @@
 
         </header>
 
-        <div class="container">
-          <div class="product">
+        <div class="container-1-3">
+{{!--           <div class="product">
             <div class="product-card">
               <h2 class="name">Girls dress</h2>
               <span class="price">£ 64.00</span>
@@ -205,7 +205,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> --}}
         </div>
         
 
