--- a/views/men.hbs
+++ b/views/men.hbs
@@ -68,7 +68,7 @@
 
         </header>
         <br>
-        <div class="container">
+        <div class="container-1-1">
           {{!-- <div class="product">
             <div class="product-card">
               <h2 class="name">Blue Shirt</h2>
