--- a/views/women.hbs
+++ b/views/women.hbs
@@ -66,7 +66,7 @@
 
         </header>
 
-        <div class="container">
+        <div class="container-1-2">
 {{!--           <div class="product">
             <div class="product-card">
               <h2 class="name">Blue blouse</h2>
