working to debug the search function but still facing a fetching problem

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -69,6 +69,7 @@
         </header>
         <main class="cont">
           <div class="search-display"></div>
+          <div id="characterList"></div>
           <div class="posts-container"></div>
         </main>
         <br>
