--- a/views/men.hbs
+++ b/views/men.hbs
@@ -66,154 +66,17 @@
                 
             </div>
 
+
         </header>
         <br>
-        <div class="container-1-1">
-          {{!-- <div class="product">
-            <div class="product-card">
-              <h2 class="name">Blue Shirt</h2>
-              <span class="price">£29.99</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="https://img.fruugo.com/product/2/90/617160902_max.jpg" class="product-img" alt="https://images.app.goo.gl/uHt6sGNihxAXW8h1A">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="https://img.fruugo.com/product/2/90/617160902_max.jpg" alt="https://images.app.goo.gl/uHt6sGNihxAXW8h1A">
-                </div>
-                <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£29.99</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Black Shirt</h2>
-              <span class="price">£23.99</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946" class="product-img" alt="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946" alt="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946">
-                </div>
-                <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£23.99</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">White Shirt</h2>
-              <span class="price">£89.99</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="https://img.fruugo.com/product/6/45/507046456_max.jpg" class="product-img" alt="https://img.fruugo.com/product/6/45/507046456_max.jpg">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="https://img.fruugo.com/product/6/45/507046456_max.jpg" alt="https://img.fruugo.com/product/6/45/507046456_max.jpg">
-                </div>
-                <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£89.99</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Denim jeans</h2>
-              <span class="price">£150.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg" class="product-img" alt="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg" alt="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg">
-                </div>
-                <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£150.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Light blue jeans</h2>
-              <span class="price">£50.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486" class="product-img" alt="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486" alt="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486">
-                </div>
-                <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£50.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Cotton jeans</h2>
-              <span class="price">£200.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg" class="product-img" alt="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg" alt="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg">
-                </div>
-                <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£200.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div> --}}
-        </div>
+        <div id="characterList"></div> 
+        <div class="container-1-1" id="container"></div>
 
 
       
         {{!-- <script src="/product-cards.js"></script> --}}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="/search.js"></script>
+        <script type="module" src="/search.js"></script>
         <script src="/shopping-basket.js"></script>
     </body>
 
