--- a/views/index.hbs
+++ b/views/index.hbs
@@ -68,7 +68,7 @@
 
         </header>
         <main class="cont">
-          <div class="search-display"></div>
+         {{!--  <div class="search-display"></div> --}}
           <div id="characterList"></div>
           <div class="posts-container"></div>
         </main>
