solved most of the issues and only one step lift to complete this feature.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
 
     <body class="responsive">
       
-        <!--<script src="css/app.js"></script>-->
+       
         <header>
             <div class="your-fashion-text-box">
                 <a href="/" class="shopname">Your Fashion</a> 
@@ -67,6 +67,7 @@
             </div>
 
         </header>
+        <div id="characterList" class="characterLists"></div>
         <main class="cont">
          {{!--  <div class="search-display"></div> --}}
           <div id="characterList"></div>
