--- a/views/kids.hbs
+++ b/views/kids.hbs
@@ -66,7 +66,7 @@
             </div>
 
         </header>
-
+        <div id="characterList" class="characterLists"></div>
         <div class="container-1-3">
 {{!--           <div class="product">
             <div class="product-card">
