--- a/views/men-shoes.hbs
+++ b/views/men-shoes.hbs
@@ -65,7 +65,7 @@
             </div>
 
         </header>
-
+        <div id="characterList" class="characterLists"></div>
         <div class="container">
           <div class="product">
             <div class="product-card">
