--- a/views/women-shoes.hbs
+++ b/views/women-shoes.hbs
@@ -64,7 +64,7 @@
             </div>
 
         </header>
-
+        <div id="characterList" class="characterLists"></div>
         <div class="container">
           <div class="product">
             <div class="product-card">
