--- a/views/men-shoes.hbs
+++ b/views/men-shoes.hbs
@@ -66,8 +66,8 @@
 
         </header>
         <div id="characterList" class="characterLists"></div>
-        <div class="container">
-          <div class="product">
+        <div class="container-1-4">
+          {{!-- <div class="product">
             <div class="product-card">
               <h2 class="name">Men Shoes</h2>
               <span class="price">£60.00</span>
@@ -204,7 +204,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> --}}
         </div>
         
 
