--- a/views/women-shoes.hbs
+++ b/views/women-shoes.hbs
@@ -66,7 +66,7 @@
         </header>
         <div id="characterList" class="characterLists"></div>
         <div class="container">
-          <div class="product">
+{{!--           <div class="product">
             <div class="product-card">
               <h2 class="name">Women Shoes</h2>
               <span class="price">£47.99</span>
@@ -203,12 +203,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> --}}
         </div>
         
 
         <script src="/product-cards.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
         <script src="/shopping-basket.js"></script>
         <script src="/search.js"></script>
     </body>
