men and women shoes pages are fetching products from the DB

--- a/views/women-shoes.hbs
+++ b/views/women-shoes.hbs
@@ -35,20 +35,20 @@
                   <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="/men">Men</a>
+                        <a class="nav-link" id="men-products" href="/men">Men</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/women">Women</a>
+                        <a class="nav-link" id="women-products" href="/women">Women</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/kids">Kids</a>
+                        <a class="nav-link" id="kids-products" href="/kids">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" id="men-s-products" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" id="women-s-products" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" id="kids-s-products" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -65,150 +65,10 @@
 
         </header>
         <div id="characterList" class="characterLists"></div>
-        <div class="container">
-{{!--           <div class="product">
-            <div class="product-card">
-              <h2 class="name">Women Shoes</h2>
-              <span class="price">£47.99</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="/images/women-shoes.jpg" class="product-img" alt="">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="/images/women-shoes.jpg" alt="">
-                </div>
-                <div class="info">
-                  <h2>Women Shoes<br><span>Foot wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£47.99</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Women Shoes</h2>
-              <span class="price">£87.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="/images/women-shoes1.jpeg" class="product-img" alt="">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="/images/women-shoes1.jpeg" alt="">
-                </div>
-                <div class="info">
-                  <h2>Women Shoes<br><span>Foot wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£87.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Women Shoes</h2>
-              <span class="price">£89.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="/images/women-shoes2.webp" class="product-img" alt="">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="/images/women-shoes2.webp" alt="">
-                </div>
-                <div class="info">
-                  <h2>Women Shoes<br><span>Foot wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£89.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Women Shoes</h2>
-              <span class="price">£119.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="/images/women-shoes3.jpg" class="product-img" alt="">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="/images/women-shoes3.jpg" alt="">
-                </div>
-                <div class="info">
-                  <h2>Women Shoes<br><span>Foot wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£119.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Women Shoes</h2>
-              <span class="price">£52.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="/images/women-shoes4.jpeg" class="product-img" alt="">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="/images/women-shoes4.jpeg" alt="">
-                </div>
-                <div class="info">
-                  <h2>Women Shoes<br><span>Foot wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£52.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="product-card">
-              <h2 class="name">Women Shoes</h2>
-              <span class="price">£ 60.00</span>
-              <a class="popup-btn">Quick View</a>
-              <img src="/images/women-shoes5.webp" class="product-img" alt="">
-            </div>
-            <div class="popup-view">
-              <div class="popup-card">
-                <a><i class="fas fa-times close-btn"></i></a>
-                <div class="product-img">
-                  <img src="/images/women-shoes5.webp" alt="">
-                </div>
-                <div class="info">
-                  <h2>Women Shoes<br><span>Foot wear</span></h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£60.00</span>
-                  <a href="#" class="add-cart-btn">Add to Cart</a>
-                  <a href="#" class="add-wish">Add to Wishlist</a>
-                </div>
-              </div>
-            </div>
-          </div> --}}
-        </div>
+        <div class="container"></div>
         
 
         <script src="/product-cards.js"></script>
-        {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
         <script src="/shopping-basket.js"></script>
         <script src="/search.js"></script>
     </body>
