all pages are fetching products from the DB

--- a/views/kids.hbs
+++ b/views/kids.hbs
@@ -48,9 +48,9 @@
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" id="men-s-products" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" id="women-s-products" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" id="kids-s-products" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
