--- a/views/women-shoes.hbs
+++ b/views/women-shoes.hbs
@@ -65,10 +65,10 @@
 
         </header>
         <div id="characterList" class="characterLists"></div>
-        <div class="container"></div>
+        <div class="container" id="container"></div>
         
 
-        <script src="/product-cards.js"></script>
+        {{!-- <script src="/product-cards.js"></script> --}}
         <script src="/shopping-basket.js"></script>
         <script src="/search.js"></script>
     </body>
