--- a/views/men.hbs
+++ b/views/men.hbs
@@ -49,9 +49,9 @@
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="/men-shoes">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="/women-shoes">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="/kids-shoes">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" id="men-s-products" href="/men-shoes">Men Shoes</a></li>
+                          <li><a class="dropdown-item" id="women-s-products" href="/women-shoes">Women Shoes</a></li>
+                          <li><a class="dropdown-item" id="kids-s-products" href="/kids-shoes">Kids Shoes</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -71,15 +71,17 @@
 
         </header>
         <br>
+        
         <div id="characterList" class="characterLists"></div> 
-        <div class="container" id="container"></div>
+        
 
 
       
         {{!-- <script src="/product-cards.js"></script> --}}
-        {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="/search.js" type="module"></script>
         <script src="/shopping-basket.js"></script>
+        <div class="container" id="container"></div>
     </body>
 
     </html>
