Routing issue is fixed

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 
     <html lang="en" charset="UTF-8">
 
@@ -33,7 +33,7 @@
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                  <a href="/" class="actives"><i class="fa fa-home"></i></a>
+                  <a href="index.hbs" class="actives"><i class="fa fa-home"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -44,7 +44,7 @@
                       
                       
                       <li class="nav-item">
-                        <a class="nav-link" id="men-products" href="/men">Men</a>
+                        <a class="nav-link" id="men-products" href="men.hbs">Men</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" id="women-products" href="/women">Women</a>
@@ -87,7 +87,7 @@
         
 
 
-       {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
       <script async
       src="https://pay.google.com/gp/p/js/pay.js"
       onload="onGooglePayLoaded()"></script>
