--- a/public/style.css
+++ b/public/style.css
@@ -10,27 +10,29 @@ body, h1, h2, p {
 /* Basic page styles */
 body {
     font-family: Arial, sans-serif;
+    background-image:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
 }
 
 .your-fashion-text-box {
     text-align: center;
     text-decoration-line: none;
     top: 3%;
-    left: 10%;
-    transform: translate(-10%, -10%);
+    
+  
+    
 }
 
 .shopname{
     margin: 0;
-    padding-left: 100px;
+    padding-left: 10px;
     color: #ffffff;;
     font-size: 24px;
-    text-transform: uppercase;
+    
     text-decoration-line: none;
     letter-spacing: 1px;
 }
 header{
-    background-image:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
+    
     background-size: cover;
     background-position: center;
     margin-bottom: -360px;
@@ -46,7 +48,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    float: none;
+    
 }
 
 .navbar .container-fluid {
@@ -60,6 +62,7 @@ header{
 
 .navbar ul.navbar-nav li {
     margin-right: 60;
+    padding: 10px 20px 10px 40px;
 }
 
 .navbar ul.navbar-nav li a {
@@ -72,7 +75,7 @@ header{
 }
 /* Add an active class to highlight the current page */
 .actives {
-    background-color:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
+   
     color: white;
     padding: 10px 20px;
     margin-right: 60;
@@ -101,31 +104,6 @@ header{
   border: 0px;
   outline: none;
 }
-
-/*.search-bar [.container]::-webkit-list-button,
-.search-bar [.container]::-webkit-calendar-picker-indicator {
-  display: none !important;
-}
-
-
-/*.search-bar button {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    
-}
-.search-bar button:hover{
-    opacity: 0.5;
-    color: #fff;
-}*/
-/* dropdown menu styles */
-/*.navbar ul.navbar-nav li a {
-    text-decoration: none;
-    color: #fff;
-}*/
 
 .nav-item ul.dropdown-menu li a {
     text-decoration: none;
@@ -456,7 +434,9 @@ header{
 
 @media only screen and (max-width:620px) {
     /* For mobile phones: */
-    .menu, .container, .login-button, .shopname {
+    .menu, .container, .login-button, .shopname, .previous-button, .next-button, .scene, .carousel, .carousel__cell, 
+    .carousel__cell:nth-child(1), .carousel__cell:nth-child(2), .carousel__cell:nth-child(3), .carousel__cell:nth-child(4), .carousel__cell:nth-child(5), .carousel__cell:nth-child(6), 
+    .carousel__cell:nth-child(7), .carousel__cell:nth-child(8), .carousel__cell:nth-child(9){
       width:100%;
     }
   }
@@ -476,7 +456,7 @@ header{
     height: 290px;
     margin: 40px auto;
     perspective: 1000px;
-    top: 30%;
+    top: 200px;
   }
   
   .carousel {
@@ -486,6 +466,7 @@ header{
     transform: translateZ(-588px);
     transform-style: preserve-3d;
     transition: transform 1s;
+    
   }
   
   .carousel__cell {
@@ -520,77 +501,52 @@ header{
   .carousel__cell:nth-child(9) { transform: rotateY(320deg) translateZ(588px); }
 
   .previous-button{
-    border-radius: 8px;
+    text-decoration: none;
     position: absolute;
-    top: 90%;
-    left: 48%;
+    top: 50%;
+    left: 5%;
+    color: #000;
+    cursor: pointer;
+    border-radius: 20px;
+    background-color: #f1efef;
+  }
+
+  .previous-button:hover{
+    background-color: #5a5e5f;
   }
    .next-button{
-    border-radius: 8px;
+    text-decoration: none;
     position: absolute;
-    top: 90%;
-    right: 45%;
+    top: 50%;
+    right: 5%;
+    color: #000;
+    cursor: pointer;
+    border-radius: 20px;
+    background-color: #f1efef;
    }
-  /* slideshow styles */
-/*  * {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
 
-/* Slideshow container */
-/*.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-  margin-top:25rem;
-}
+   .next-button:hover{
+    background-color: #5a5e5f;
+  }
 
-/* Caption text */
-/*.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
+   footer {
+    position:fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    text-align: center;
+    
+  }
 
-/* Number text (1/3 etc) */
-/*.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 
-/* The dots/bullets/indicators */
-/*.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-/*.fade {
-  animation-name: fade;
-  animation-duration: 2s;
-}*/
 
 
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 100px) {
-  .text {font-size: 8px}
+  .text {font-size: 8px} 
 }
 
 
