diary has been edited and cleaning up the code

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -33,7 +33,7 @@
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                  <a href="index.hbs" class="actives"><i class="fa fa-home"></i></a>
+                  <a href="/" class="actives"><i class="fa fa-home"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -44,7 +44,7 @@
                       
                       
                       <li class="nav-item">
-                        <a class="nav-link" id="men-products" href="men.hbs">Men</a>
+                        <a class="nav-link" id="men-products" href="/men">Men</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" id="women-products" href="/women">Women</a>
