--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,52 +22,7 @@
 
 
   <header>
-
-
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <div class="container-fluid">
-        <a href="/" class="actives"><i class="fa fa-home"></i></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-
-          <ul class="navbar-nav">
-
-
-            <li class="nav-item">
-              <a class="nav-link" id="men-products" href="/men">Men</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="women-products" href="/women">Women</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="kids-products" href="/kids">Kids</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
-              <ul class="dropdown-menu" id="submenu">
-                <li><a class="dropdown-item" id="men-s-products" href="/men-shoes">Men Shoes</a></li>
-                <li><a class="dropdown-item" id="women-s-products" href="/women-shoes">Women Shoes</a></li>
-                <li><a class="dropdown-item" id="kids-s-products" href="/kids-shoes">Kids Shoes</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-        <a class="login-button" href="#">login</a>
-        <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
-      </div>
-    </nav>
-    <div class="your-fashion-text-box">
-      <a href="/" class="shopname">Your Fashion</a>
-    </div>
-    <div class="search-bar">
-      <input class="search" type="text" id="search-input" placeholder="&#x1F50D; Start typing to search"
-        list="container" autocomplete="off" />
-    </div>
-
+    {{> common/navbar}}
   </header>
   <div id="characterList" class="characterLists"></div>
   <main class="cont">
