--- a/views/women-shoes.hbs
+++ b/views/women-shoes.hbs
@@ -9,68 +9,38 @@
         <title>Your Fashion</title>
         <link rel="stylesheet" type="text/css" href="/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
+       
         <link rel="stylesheet" type="text/css" href="/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
        
 
+        
 
     </head>
 
     <body class="responsive">
       
+       
         <header>
-            <div class="your-fashion-text-box">
-                <a href="/" class="shopname">Your Fashion</a> 
-            </div>
-
-            
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-                <div class="container-fluid">
-                    <a href="/" class="actives"><i class="fa fa-home"></i></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link" id="men-products" href="/men">Men</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" id="women-products" href="/women">Women</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" id="kids-products" href="/kids">Kids</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
-                        <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" id="men-s-products" href="/men-shoes">Men Shoes</a></li>
-                          <li><a class="dropdown-item" id="women-s-products" href="/women-shoes">Women Shoes</a></li>
-                          <li><a class="dropdown-item" id="kids-s-products" href="/kids-shoes">Kids Shoes</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                    
-                  </div>
-                  <a class="login-button"href="#">login</a>
-                  <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
-                </div>
-              </nav>
-              <div class="search-bar">
-                <input class="search" type="text" id="search-input" placeholder="&#x1F50D; Start typing to search" list="container" autocomplete="off"/>
-                
-            </div>
-
+          {{> common/navbar}}
         </header>
-        <div id="characterList" class="characterLists"></div>
-        <div class="container" id="container"></div>
+        <br>
         
+        <div id="characterList" class="characterLists"></div> 
+        <div class="container" id="container"></div>
 
+    
         {{!-- <script src="/product-cards.js"></script> --}}
+        {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
+        <script src="/search.js" type="module"></script>
         <script src="/shopping-basket.js"></script>
-        <script src="/search.js"></script>
+        
     </body>
+<footer>
+  <p>Author: Tim Adams<br><a href="mailto:tim.adams1@hotmail.com">tim.adams1@hotmail.com</a><br><a>&#9742;
+      07469241247</a></p>
+</footer>
 
-    </html>
+</html>
