--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
     letter-spacing: 1px;
 }
 header{
-    background-image:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
+    /* background-image:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3)); */
     background-size: cover;
     background-position: center;
     margin-bottom: -360px;
@@ -72,7 +72,7 @@ header{
 }
 /* Add an active class to highlight the current page */
 .actives {
-    background-color:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
+    /* background-color:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3)); */
     color: white;
     padding: 10px 20px;
     margin-right: 60;
@@ -99,25 +99,6 @@ header{
     background: #fff url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
 }
 
-
-/*.search-bar button {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    
-}
-.search-bar button:hover{
-    opacity: 0.5;
-    color: #fff;
-}*/
-/* dropdown menu styles */
-/*.navbar ul.navbar-nav li a {
-    text-decoration: none;
-    color: #fff;
-}*/
 
 .nav-item ul.dropdown-menu li a {
     text-decoration: none;
@@ -511,62 +492,6 @@ header{
     top: 90%;
     right: 45%;
    }
-  /* slideshow styles */
-/*  * {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-/*.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-  margin-top:25rem;
-}
-
-/* Caption text */
-/*.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-/*.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-/*.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-/*.fade {
-  animation-name: fade;
-  animation-duration: 2s;
-}*/
-
-
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 100px) {
