footer has been implemented

--- a/views/women.hbs
+++ b/views/women.hbs
@@ -32,15 +32,11 @@
         <div class="container" id="container"></div>
 
     
-        {{!-- <script src="/product-cards.js"></script> --}}
-        {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
+        {{> common/footer}}
         <script src="/search.js" type="module"></script>
         <script src="/shopping-basket.js"></script>
         
     </body>
-<footer>
-  <p>Author: Tim Adams<br><a href="mailto:tim.adams1@hotmail.com">tim.adams1@hotmail.com</a><br><a>&#9742;
-      07469241247</a></p>
-</footer>
+
 
 </html>
