--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ body, h1, h2, p {
 /* Basic page styles */
 .responsive {
     font-family: Arial, sans-serif;
-    background:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
+    background:rgba(0, 0, 0, 0.3);
 
 }
 
@@ -435,14 +435,14 @@ header{
 
 @media only screen and (max-width:620px) {
     /* For mobile phones: */
-    .menu, .container, .login-button, .shopname, .previous-button, .next-button, .scene, .carousel, .carousel__cell, 
+    .menu, .container, .login-button, .shopname, .previous-button, .next-button, .scene, .carousel, .carousel__cell, .footer, .containers, 
     .carousel__cell:nth-child(1), .carousel__cell:nth-child(2), .carousel__cell:nth-child(3), .carousel__cell:nth-child(4), .carousel__cell:nth-child(5), .carousel__cell:nth-child(6), 
     .carousel__cell:nth-child(7), .carousel__cell:nth-child(8), .carousel__cell:nth-child(9){
       width:100%;
     }
   }
   @media screen and (max-width:1250px){
-      .container ul li, .login-button{
+      .container ul li, .login-button, .footer, .containers{
           width:40%;
           margin-left: 40px;
            
@@ -529,17 +529,98 @@ header{
    .next-button:hover{
     background-color: #5a5e5f;
   }
+/* footer style */
 
-   footer {
-    position:fixed;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+.containers{
+	max-width: 1170px;
+	margin:auto;
+}
+.row{
+	display: flex;
+	flex-wrap: wrap;
+}
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: rgba(0, 0, 0, 0.8);
+    padding: 50px 0;
+    position: absolute;
+    right: 0;
     left: 0;
-    bottom: 0;
+    bottom: -1000px;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255,255,255,0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col, .footer, .containers{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col, .footer, .containers{
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: white;
-    text-align: center;
-    
-  }
+}
+}
+
 
 
 
