--- a/views/common/navbar.hbs
+++ b/views/common/navbar.hbs
@@ -1,62 +1,67 @@
-          <div>
-            <div class="your-fashion-text-box">
-                <a href="/" class="shopname">Your Fashion</a> 
-            </div>
+<div>
 
-            
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-                <div class="container-fluid">
-                  <a href="/" class="actives"><i class="fa fa-home"></i></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  
-                  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    
-                    <ul class="navbar-nav">
-                      
-                      
-                      <li class="nav-item" onclick="handleAnchorClick('/men')">
-                        <a class="nav-link" id="men-products" href="/men">Men</a>
-                      </li>
-                      <li class="nav-item" onclick="handleAnchorClick('/women')">
-                        <a class="nav-link" id="women-products" href="/women">Women</a>
-                      </li>
-                      <li class="nav-item" onclick="handleAnchorClick('/kids')">
-                        <a class="nav-link" id="kids-products" href="/kids">Kids</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
-                        <ul class="dropdown-menu" id="submenu">
-                          <li onclick="handleAnchorClick('/men-shoes')"><a class="dropdown-item" id="men-s-products" href="/men-shoes">Men Shoes</a></li>
-                          <li onclick="handleAnchorClick('/women-shoes')"><a class="dropdown-item" id="women-s-products" href="/women-shoes">Women Shoes</a></li>
-                          <li onclick="handleAnchorClick('/kids-shoes')"><a class="dropdown-item" id="kids-s-products" href="/kids-shoes">Kids Shoes</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </div>
-                  <a class="login-button" href="/authenticate?mode=register">Register</a>
-                  <a class="login-button" href="/authenticate?mode=login">Login</a>
-                  <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
-                </div>
-              </nav>
-              <div class="search-bar">
-                <input class="search" type="text" id="search-input" placeholder="&#x1F50D; Start typing to search" list="container" autocomplete="off"/>
-            </div>
-            <script>
-                function handleAnchorClick(category){
-                  window.location.href = category;
-                }
 
-                const user = JSON.parse(localStorage.getItem('user'))
 
-                if(user) {
-                  document.querySelectorAll(".login-button").forEach(el => {
-                    el.style.display = "none"
-                  })
-                }
-            </script>
-     
-            <script src="/init-shoppingcart.js"></script>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a href="/" class="actives"><i class="fa fa-home"></i></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        </div>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+
+        <ul class="navbar-nav">
+
+
+          <li class="nav-item" onclick="handleAnchorClick('/men')">
+            <a class="nav-link" id="men-products" href="/men">Men</a>
+          </li>
+          <li class="nav-item" onclick="handleAnchorClick('/women')">
+            <a class="nav-link" id="women-products" href="/women">Women</a>
+          </li>
+          <li class="nav-item" onclick="handleAnchorClick('/kids')">
+            <a class="nav-link" id="kids-products" href="/kids">Kids</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
+            <ul class="dropdown-menu" id="submenu">
+              <li onclick="handleAnchorClick('/men-shoes')"><a class="dropdown-item" id="men-s-products"
+                  href="/men-shoes">Men Shoes</a></li>
+              <li onclick="handleAnchorClick('/women-shoes')"><a class="dropdown-item" id="women-s-products"
+                  href="/women-shoes">Women Shoes</a></li>
+              <li onclick="handleAnchorClick('/kids-shoes')"><a class="dropdown-item" id="kids-s-products"
+                  href="/kids-shoes">Kids Shoes</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <a class="login-button" href="/authenticate?mode=register">Register</a>
+      <a class="login-button" href="/authenticate?mode=login">Login</a>
+      <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+    </div>
+  </nav>
+  <div class="your-fashion-text-box">
+    <a href="/" class="shopname">Your Fashion</a>
+  </div>
+  <div class="search-bar">
+    <input class="search" type="text" id="search-input" placeholder="&#x1F50D; Start typing to search" list="container"
+      autocomplete="off" />
+  </div>
+  <script>
+    function handleAnchorClick(category) {
+      window.location.href = category;
+    }
+
+    const user = JSON.parse(localStorage.getItem('user'))
+
+    if (user) {
+      document.querySelectorAll(".login-button").forEach(el => {
+        el.style.display = "none"
+      })
+    }
+  </script>
+
+  <script src="/init-shoppingcart.js"></script>
+
+</div>
