--- a/views/index.hbs
+++ b/views/index.hbs
@@ -63,22 +63,15 @@
     <button class="next-button"><span style="font-size: 36px;">&#129130;</span></button>
   </p>
 
+  
+
 
   <script src="/slides.js"></script>
-  {{!--
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
-    integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
   <script src="/search.js"></script>
   <script src="/shopping-basket.js"></script>
 
 </body>
-<div>
-  <footer>
-  <p>Author: Tim Adams<br><a href="mailto:tim.adams1@hotmail.com">tim.adams1@hotmail.com</a><br><a>&#9742;
-      07469241247</a></p>
-  </footer>
-</div>
 
+{{> common/footer}}
 
 </html>
